Final version HW 5

--- a/index.html
+++ b/index.html
@@ -25,21 +25,21 @@
             ><span class="color-modify">Web</span>Studio</a
           >
           <ul class="nav-menu">
-            <li class="nav-menu-item">
+            <li class="nav-menu-item" tabindex="0">
               <a class="nav-menu-link color-modify" href="./index.html"
                 >Студія</a
               >
             </li>
-            <li class="nav-menu-item">
+            <li class="nav-menu-item" tabindex="0">
               <a class="nav-menu-link" href="./portfolio.html">Портфоліо</a>
             </li>
-            <li class="nav-menu-item">
+            <li class="nav-menu-item" tabindex="0">
               <a class="nav-menu-link" href="#">Контакти</a>
             </li>
           </ul>
         </nav>
         <ul class="contacts-list">
-          <li class="contacts-item">
+          <li class="contacts-item" tabindex="0">
             <svg class="contacts-logo" width="16" height="12">
               <use
                 href="./images/svg__sprite/symbol-defs.svg#icon-envelope"
@@ -49,7 +49,7 @@
               >info@devstudio.com</a
             >
           </li>
-          <li class="contacts-item">
+          <li class="contacts-item" tabindex="0">
             <svg class="contacts-logo" width="10" height="16">
               <use href="./images/svg__sprite/symbol-defs.svg#icon-smartphone">
                 >
@@ -66,7 +66,14 @@
       <div class="bg-container">
         <section class="container section main-page">
           <h1 class="main-title">Ефективні рішення для вашого бізнесу</h1>
-          <button class="btn-primary" type="button">Замовити послугу</button>
+          <button
+            class="btn-primary"
+            type="button"
+            tabindex="0"
+            data-modal-open
+          >
+            Замовити послугу
+          </button>
         </section>
       </div>
       <section class="container section company-advantages">
@@ -165,7 +172,7 @@
         <section class="container section">
           <h2 class="our-team-title">Наша команда</h2>
           <ul class="our-team-list">
-            <li class="our-team-item">
+            <li class="our-team-item" tabindex="0">
               <img
                 class="our-team-photo"
                 src="./images/our_team/our_team_igor_demianenko.jpg"
@@ -176,7 +183,7 @@
                 <h3 class="team-member-name">Ігор Дем'яненко</h3>
                 <p class="team-member-description">Product Designer</p>
                 <ul class="team-member-sm">
-                  <li class="member-sm-item">
+                  <li class="member-sm-item" tabindex="0">
                     <a href="#">
                       <svg class="member-sm-icon" width="20" height="20">
                         <use
@@ -185,7 +192,7 @@
                       </svg>
                     </a>
                   </li>
-                  <li class="member-sm-item">
+                  <li class="member-sm-item" tabindex="0">
                     <a href="#">
                       <svg class="member-sm-icon" width="20" height="20">
                         <use
@@ -194,7 +201,7 @@
                       </svg>
                     </a>
                   </li>
-                  <li class="member-sm-item">
+                  <li class="member-sm-item" tabindex="0">
                     <a href="#">
                       <svg class="member-sm-icon" width="20" height="20">
                         <use
@@ -203,7 +210,7 @@
                       </svg>
                     </a>
                   </li>
-                  <li class="member-sm-item">
+                  <li class="member-sm-item" tabindex="0">
                     <a href="#">
                       <svg class="member-sm-icon" width="20" height="20">
                         <use
@@ -226,7 +233,7 @@
                 <h3 class="team-member-name">Ольга Рєпіна</h3>
                 <p class="team-member-description">Frontend Developer</p>
                 <ul class="team-member-sm">
-                  <li class="member-sm-item">
+                  <li class="member-sm-item" tabindex="0">
                     <a href="#">
                       <svg class="member-sm-icon" width="20" height="20">
                         <use
@@ -235,7 +242,7 @@
                       </svg>
                     </a>
                   </li>
-                  <li class="member-sm-item">
+                  <li class="member-sm-item" tabindex="0">
                     <a href="#">
                       <svg class="member-sm-icon" width="20" height="20">
                         <use
@@ -244,7 +251,7 @@
                       </svg>
                     </a>
                   </li>
-                  <li class="member-sm-item">
+                  <li class="member-sm-item" tabindex="0">
                     <a href="#">
                       <svg class="member-sm-icon" width="20" height="20">
                         <use
@@ -253,7 +260,7 @@
                       </svg>
                     </a>
                   </li>
-                  <li class="member-sm-item">
+                  <li class="member-sm-item" tabindex="0">
                     <a href="#">
                       <svg class="member-sm-icon" width="20" height="20">
                         <use
@@ -276,7 +283,7 @@
                 <h3 class="team-member-name">Микола Тарасов</h3>
                 <p class="team-member-description">Marketing</p>
                 <ul class="team-member-sm">
-                  <li class="member-sm-item">
+                  <li class="member-sm-item" tabindex="0">
                     <a href="#">
                       <svg class="member-sm-icon" width="20" height="20">
                         <use
@@ -285,7 +292,7 @@
                       </svg>
                     </a>
                   </li>
-                  <li class="member-sm-item">
+                  <li class="member-sm-item" tabindex="0">
                     <a href="#">
                       <svg class="member-sm-icon" width="20" height="20">
                         <use
@@ -294,7 +301,7 @@
                       </svg>
                     </a>
                   </li>
-                  <li class="member-sm-item">
+                  <li class="member-sm-item" tabindex="0">
                     <a href="#">
                       <svg class="member-sm-icon" width="20" height="20">
                         <use
@@ -303,7 +310,7 @@
                       </svg>
                     </a>
                   </li>
-                  <li class="member-sm-item">
+                  <li class="member-sm-item" tabindex="0">
                     <a href="#">
                       <svg class="member-sm-icon" width="20" height="20">
                         <use
@@ -326,7 +333,7 @@
                 <h3 class="team-member-name">Михайло Єрмаков</h3>
                 <p class="team-member-description">UI Designer</p>
                 <ul class="team-member-sm">
-                  <li class="member-sm-item">
+                  <li class="member-sm-item" tabindex="0">
                     <a href="#">
                       <svg class="member-sm-icon" width="20" height="20">
                         <use
@@ -335,7 +342,7 @@
                       </svg>
                     </a>
                   </li>
-                  <li class="member-sm-item">
+                  <li class="member-sm-item" tabindex="0">
                     <a href="#">
                       <svg class="member-sm-icon" width="20" height="20">
                         <use
@@ -344,7 +351,7 @@
                       </svg>
                     </a>
                   </li>
-                  <li class="member-sm-item">
+                  <li class="member-sm-item" tabindex="0">
                     <a href="#">
                       <svg class="member-sm-icon" width="20" height="20">
                         <use
@@ -353,7 +360,7 @@
                       </svg>
                     </a>
                   </li>
-                  <li class="member-sm-item">
+                  <li class="member-sm-item" tabindex="0">
                     <a href="#">
                       <svg class="member-sm-icon" width="20" height="20">
                         <use
@@ -371,7 +378,7 @@
       <section class="container section clients-section">
         <h2 class="clients-title">Постійні клієнти</h2>
         <ul class="clients-list">
-          <li class="clients-item">
+          <li class="clients-item" tabindex="0">
             <a href="#">
               <svg class="clients-icon" width="41" height="46">
                 <use
@@ -380,7 +387,7 @@
               </svg>
             </a>
           </li>
-          <li class="clients-item">
+          <li class="clients-item" tabindex="0">
             <a href="#">
               <svg class="clients-icon" width="40" height="52">
                 <use
@@ -389,7 +396,7 @@
               </svg>
             </a>
           </li>
-          <li class="clients-item">
+          <li class="clients-item" tabindex="0">
             <a href="#">
               <svg class="clients-icon" width="43" height="41">
                 <use
@@ -398,7 +405,7 @@
               </svg>
             </a>
           </li>
-          <li class="clients-item">
+          <li class="clients-item" tabindex="0">
             <a href="#">
               <svg class="clients-icon" width="84" height="41">
                 <use
@@ -407,7 +414,7 @@
               </svg>
             </a>
           </li>
-          <li class="clients-item">
+          <li class="clients-item" tabindex="0">
             <a href="#">
               <svg class="clients-icon" width="63" height="45">
                 <use
@@ -416,7 +423,7 @@
               </svg>
             </a>
           </li>
-          <li class="clients-item">
+          <li class="clients-item" tabindex="0">
             <a href="#">
               <svg class="clients-icon" width="98" height="44">
                 <use
@@ -439,12 +446,18 @@
           </address>
           <ul class="footer-contacts-list">
             <li class="footer-contacts-item">
-              <a class="footer-contacts-link" href="mailto:info@devstudio.com"
+              <a
+                class="footer-contacts-link"
+                href="mailto:info@devstudio.com"
+                tabindex="0"
                 >info@devstudio.com</a
               >
             </li>
             <li class="footer-contacts-item">
-              <a class="footer-contacts-link" href="tel:+380961111111"
+              <a
+                class="footer-contacts-link"
+                href="tel:+380961111111"
+                tabindex="0"
                 >+38 096 111 11 11</a
               >
             </li>
@@ -453,28 +466,28 @@
         <div class="footer-sm-container">
           <span class="sm-container-title">Приєднуйтесь</span>
           <ul class="social-media">
-            <li class="sm-item">
+            <li class="sm-item" tabindex="0">
               <svg class="sm-icon" width="20" height="20">
                 <use
                   href="./images/svg__sprite/symbol-defs.svg#icon-instagram-2"
                 ></use>
               </svg>
             </li>
-            <li class="sm-item">
+            <li class="sm-item" tabindex="0">
               <svg class="sm-icon" width="20" height="20">
                 <use
                   href="./images/svg__sprite/symbol-defs.svg#icon-twitter-1"
                 ></use>
               </svg>
             </li>
-            <li class="sm-item">
+            <li class="sm-item" tabindex="0">
               <svg class="sm-icon" width="20" height="20">
                 <use
                   href="./images/svg__sprite/symbol-defs.svg#icon-facebook-1"
                 ></use>
               </svg>
             </li>
-            <li class="sm-item">
+            <li class="sm-item" tabindex="0">
               <svg class="sm-icon" width="20" height="20">
                 <use
                   href="./images/svg__sprite/symbol-defs.svg#icon-linkedin-1"
@@ -485,14 +498,15 @@
         </div>
       </div>
     </footer>
-    <div class="backdrop is-hidden">
+    <div class="backdrop is-hidden" data-modal>
       <div class="modal">
-        <button class="modal-button">
+        <button class="modal-button" data-modal-close>
           <svg class="modal-button-icon" width="11" height="11">
             <use href="./images/svg__sprite/symbol-defs.svg#icon-close"></use>
           </svg>
         </button>
       </div>
     </div>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
