--- a/portfolio.html
+++ b/portfolio.html
@@ -25,21 +25,21 @@
             ><span class="color-modify">Web</span>Studio</a
           >
           <ul class="nav-menu">
-            <li class="nav-menu-item">
+            <li class="nav-menu-item" tabindex="0">
               <a class="nav-menu-link" href="./index.html">Студія</a>
             </li>
-            <li class="nav-menu-item">
+            <li class="nav-menu-item" tabindex="0">
               <a class="nav-menu-link color-modify" href="./portfolio.html"
                 >Портфоліо</a
               >
             </li>
-            <li class="nav-menu-item">
+            <li class="nav-menu-item" tabindex="0">
               <a class="nav-menu-link" href="#">Контакти</a>
             </li>
           </ul>
         </nav>
         <ul class="contacts-list">
-          <li class="contacts-item">
+          <li class="contacts-item" tabindex="0">
             <svg class="contacts-logo" width="16" height="12">
               <use
                 href="./images/svg__sprite/symbol-defs.svg#icon-envelope"
@@ -49,7 +49,7 @@
               >info@devstudio.com</a
             >
           </li>
-          <li class="contacts-item">
+          <li class="contacts-item" tabindex="0">
             <svg class="contacts-logo" width="10" height="16">
               <use href="./images/svg__sprite/symbol-defs.svg#icon-smartphone">
                 >
@@ -68,23 +68,37 @@
           <h1 hidden>Портфоліо проекти</h1>
           <ul class="portfolio-filter-list">
             <li class="portfolio-button">
-              <button class="filter-button bg-modify" type="button">Усі</button>
+              <button
+                class="filter-button bg-modify"
+                type="button"
+                tabindex="0"
+              >
+                Усі
+              </button>
             </li>
             <li class="portfolio-button">
-              <button class="filter-button" type="button">Веб-сайти</button>
+              <button class="filter-button" type="button" tabindex="0">
+                Веб-сайти
+              </button>
             </li>
             <li class="portfolio-button">
-              <button class="filter-button" type="button">Додатки</button>
+              <button class="filter-button" type="button" tabindex="0">
+                Додатки
+              </button>
             </li>
             <li class="portfolio-button">
-              <button class="filter-button" type="button">Дизайн</button>
+              <button class="filter-button" type="button" tabindex="0">
+                Дизайн
+              </button>
             </li>
             <li class="portfolio-button">
-              <button class="filter-button" type="button">Маркетинг</button>
+              <button class="filter-button" type="button" tabindex="0">
+                Маркетинг
+              </button>
             </li>
           </ul>
           <ul class="portfolio-projects">
-            <li class="portfolio-item">
+            <li class="portfolio-item" tabindex="0">
               <div class="project-pic-description">
                 <img
                   class="project-image"
@@ -105,7 +119,7 @@
                 <p class="project-type">Веб-сайт</p>
               </div>
             </li>
-            <li class="portfolio-item">
+            <li class="portfolio-item" tabindex="0">
               <div class="project-pic-description">
                 <img
                   class="project-image"
@@ -126,7 +140,7 @@
                 <p class="project-type">Дизайн</p>
               </div>
             </li>
-            <li class="portfolio-item">
+            <li class="portfolio-item" tabindex="0">
               <div class="project-pic-description">
                 <img
                   class="project-image"
@@ -147,7 +161,7 @@
                 <p class="project-type">Додаток</p>
               </div>
             </li>
-            <li class="portfolio-item">
+            <li class="portfolio-item" tabindex="0">
               <div class="project-pic-description">
                 <img
                   class="project-image"
@@ -168,7 +182,7 @@
                 <p class="project-type">Маркетинг</p>
               </div>
             </li>
-            <li class="portfolio-item">
+            <li class="portfolio-item" tabindex="0">
               <div class="project-pic-description">
                 <img
                   class="project-image"
@@ -189,7 +203,7 @@
                 <p class="project-type">Додаток</p>
               </div>
             </li>
-            <li class="portfolio-item">
+            <li class="portfolio-item" tabindex="0">
               <div class="project-pic-description">
                 <img
                   class="project-image"
@@ -210,7 +224,7 @@
                 <p class="project-type">Веб-сайт</p>
               </div>
             </li>
-            <li class="portfolio-item">
+            <li class="portfolio-item" tabindex="0">
               <div class="project-pic-description">
                 <img
                   class="project-image"
@@ -231,7 +245,7 @@
                 <p class="project-type">Дизайн</p>
               </div>
             </li>
-            <li class="portfolio-item">
+            <li class="portfolio-item" tabindex="0">
               <div class="project-pic-description">
                 <img
                   class="project-image"
@@ -252,7 +266,7 @@
                 <p class="project-type">Маркетинг</p>
               </div>
             </li>
-            <li class="portfolio-item">
+            <li class="portfolio-item" tabindex="0">
               <div class="project-pic-description">
                 <img
                   class="project-image"
@@ -288,12 +302,18 @@
           </address>
           <ul class="footer-contacts-list">
             <li class="footer-contacts-item">
-              <a class="footer-contacts-link" href="mailto:info@devstudio.com"
+              <a
+                class="footer-contacts-link"
+                href="mailto:info@devstudio.com"
+                tabindex="0"
                 >info@devstudio.com</a
               >
             </li>
             <li class="footer-contacts-item">
-              <a class="footer-contacts-link" href="tel:+380961111111"
+              <a
+                class="footer-contacts-link"
+                href="tel:+380961111111"
+                tabindex="0"
                 >+38 096 111 11 11</a
               >
             </li>
@@ -302,28 +322,28 @@
         <div class="footer-sm-container">
           <span class="sm-container-title">Приєднуйтесь</span>
           <ul class="social-media">
-            <li class="sm-item">
+            <li class="sm-item" tabindex="0">
               <svg class="sm-icon" width="20" height="20">
                 <use
                   href="./images/svg__sprite/symbol-defs.svg#icon-instagram-2"
                 ></use>
               </svg>
             </li>
-            <li class="sm-item">
+            <li class="sm-item" tabindex="0">
               <svg class="sm-icon" width="20" height="20">
                 <use
                   href="./images/svg__sprite/symbol-defs.svg#icon-twitter-1"
                 ></use>
               </svg>
             </li>
-            <li class="sm-item">
+            <li class="sm-item" tabindex="0">
               <svg class="sm-icon" width="20" height="20">
                 <use
                   href="./images/svg__sprite/symbol-defs.svg#icon-facebook-1"
                 ></use>
               </svg>
             </li>
-            <li class="sm-item">
+            <li class="sm-item" tabindex="0">
               <svg class="sm-icon" width="20" height="20">
                 <use
                   href="./images/svg__sprite/symbol-defs.svg#icon-linkedin-1"
@@ -334,5 +354,6 @@
         </div>
       </div>
     </footer>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
